Dataflow pipeline- download from gdrive and upload to gcs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.profiles.active=local
 spring.cloud.gcp.project-id=vasanthgopal-5dec6
+spring.cloud.gcp.cloud-storage-bucket-name=dataflow-demo-storage-vasanthgopal-5dec6
+
+gcp.service-account-key-path=pipeline/credentials/service-account-key.json
